--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ function initButtons() {
       msg.textContent = messages[noCount - 1];
     } else if (noCount === 5) {
       msg.innerHTML = `
-        <strong>Este gatito confía en que dirás que sí 🐱💔</strong>
+        <strong>Este gatito confía en que dirás que sí 😿💔</strong>
         <img class="meme" src="gato_meme.jpg">
       `;
     }
@@ -247,3 +247,4 @@ initButtons();
 
 </body>
 </html>
+
