--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ function initButtons() {
       msg.textContent = messages[noCount - 1];
     } else if (noCount === 5) {
       msg.innerHTML = `
-        <strong>Este gatito confía en que dirás que sí 🐱💔</strong>
+        <strong>Este gatito confía en que dirás que sí 😿💔</strong>
         <img class="meme" src="gato_meme.jpg" alt="Gatito triste">
       `;
     }
@@ -258,3 +258,4 @@ initButtons();
 
 </body>
 </html>
+
