--- a/index.html
+++ b/index.html
@@ -238,8 +238,12 @@ function initButtons() {
 
   yesBtn.addEventListener("click", () => {
     card.innerHTML = `
-      <h2>Sabía que dirías que sí 💖</h2>
-      <p>Feliz San Valentín mi vida 🥰<br>Te amo, mi pingüi 🐧</p>
+      <h2>Sabía que dirías que sí 💖 jeje</h2>
+      <p> style="line-height:1.6">
+          📅 cita sábado 14 - 21hrs ❤️‍🔥<br><br>
+          Pasaré por ti bbi😏<br><br>
+          Te amo, mi pingüi 🐧
+      </p>
     `;
 
     for (let i = 0; i < 25; i++) {
@@ -258,4 +262,5 @@ initButtons();
 
 </body>
 </html>
+
 
