--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ function initButtons() {
   yesBtn.addEventListener("click", () => {
     card.innerHTML = `
       <h2>Sabía que dirías que sí 💖 jeje</h2>
-      <p> style="line-height:1.6">
+      <p style="line-height:1.6">
           📅 cita sábado 14 - 21hrs ❤️‍🔥<br><br>
           Pasaré por ti bbi😏<br><br>
           Te amo, mi pingüi 🐧
@@ -262,5 +262,6 @@ initButtons();
 
 </body>
 </html>
+
 
 
