--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ function initButtons() {
     card.innerHTML = `
       <h2>Sabía que dirías que sí 💖 jeje</h2>
       <p style="line-height:1.6">
-          📅 cita sábado 14 - 21hrs ❤️‍🔥<br><br>
+          📅 cita sábado 14 - 21hrs ❤️‍🔥<br>
           Pasaré por ti bbi😏<br><br>
           Te amo, mi pingüi 🐧
       </p>
@@ -262,6 +262,7 @@ initButtons();
 
 </body>
 </html>
+
 
 
 
